Fixed issue with footer overlapping.

--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ body {
     position: relative;
     top: 200px;
     margin: 0px;
+    padding-bottom: 115px;
 }
 
 tbody {
